- Adds style to pagination on instance list - Updates vm icon - Fixes modal header being overlapped by general site header

--- a/src/components/CloudConnectionsView/CloudConnectionsView.scss
+++ b/src/components/CloudConnectionsView/CloudConnectionsView.scss
@@ -113,4 +113,5 @@ $connectionHeaderBg: #D9DCE3;
   padding-top: 8px;
   float: left;
   width: 800px;
+  padding-bottom: 32px;
 }
