--- a/src/components/MigrationDetail/MigrationDetail.scss
+++ b/src/components/MigrationDetail/MigrationDetail.scss
@@ -21,7 +21,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   :global(.arrow) {
     width: 64px;
     height: 32px;
-    margin-top: 52px;
+    margin-top: 60px;
     margin-left: 70px;
     position: absolute;
   }
